# tarea_1_compactas

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  exp_pat_fijo.sh  exp_txt_fijo.sh  setup.sh
apps/: CMakeLists.txt  archivos_subset.cpp  ejemplo_2.cpp  exp_pat_fijo.cpp  exp_txt_fijo.cpp  experimento.cpp  main.cpp  sandbox.cpp  setup.sh
cmake/: AddProjectExecutable.cmake  AddProjectLibrary.cmake  BuildTypeOptions.cmake  CompilerWarnings.cmake
docs/: cmake_workflow.md  conventions.md
include/core/: bitvector.hpp  fm_index_wavelet.hpp  greeting.hpp  wtree.hpp
include/framework_experiments/: brute_rank.hpp  fm_index.hpp  lab_rank.hpp  rank_structure.hpp  sdsl_rank.hpp
results/: grapher.ipynb
src/: CMakeLists.txt
src/core/: bitvector_others.cpp  bitvector_rank.cpp  brute_rank.cpp  fm_index.cpp  greeting.cpp  lab_rank.cpp
src/lab_wavelet/: bitvector_constructors.cpp  bitvector_select_1.cpp  bitvector_select_2.cpp  wtree_constructors.cpp  wtree_operations.cpp
